--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     position: absolute;
     left: 100px;
     top: 400px;
-    mar
+    
 }
 
 .white {
@@ -46,4 +46,42 @@
     position: absolute;
     top: 515px;
     left: 50px;
+}
+
+.main__second {
+    background-color: rgb(0, 0, 0);
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    transform: translate(590px,75px);
+}
+
+.white__second {
+    background-color: rgb(255, 255, 255);
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transform: translate(24px,24px);
+}
+
+.black__second {
+    background-color: rgb(0, 0, 0);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transform: translate(50px,50px);
+}
+
+.horizontal__second {
+    height: 350px;
+    width: 20px;
+    background-color: black;
+    transform: translate(704px,-225px);
+}
+
+.vertical__second {
+    height: 20px;
+    width: 350px;
+    background-color: black;
+    transform: translate(539px,-405px);
 }
