--- a/style.css
+++ b/style.css
@@ -2,38 +2,42 @@
     padding: 0;
     margin: 0;
     text-align: center;
-    font-size: 20px;
 }
-wrapper {
-    display: flex;
-    flex-direction: column;
-}
-header {
-    height: 624px;
-    display: flex;
-    background: rgb(75, 198, 255);
-}
-main {
-    height: 156px;
-    width: 100%;
+
+
+.left {
+    float: left;
+    width: 25%;
     background: blue;
-    display: flex;
-    justify-content: center;
+    height: 624px;
 }
-main img{
-    height: 156px;
+.right {
+    float: left;
+    width: 75%;
+    background: rgb(149, 149, 255);
+    height: 624px;
+
 }
-footer {
-    height: 156px;
+.center {
+    float: left;
     width: 100%;
-    background: wheat;
+    background: rgb(0, 247, 255);
+    height: 156px;
+
 }
-.header__left {
-    flex: 1;
-    background:black;
-    background-repeat: no-repeat;
-    background-size: cover;
+.footer {
+    float: left;
+    width: 100%;
+    background: rgb(0, 9, 90);
+    height: 156px;
+
 }
-.header__right {
-    flex: 3;
+
+.left img {
+    width: 100%;
+    height: 624px;
+}
+.center img {
+    width: 100%;
+    height: 156px;
 }
