--- a/style.css
+++ b/style.css
@@ -1,39 +1,154 @@
-* {
-    padding: 0;
-    margin: 0;
-    text-align: center;
-    font-size: 20px;
+*{
+  padding: 0;
+  margin: 0;
 }
-wrapper {
-    display: flex;
-    flex-direction: column;
+
+wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-header {
-    height: 624px;
-    display: flex;
-    background: rgb(75, 198, 255);
+
+body {
+  align-items: center;
+  height: 100vh;
 }
-main {
-    height: 156px;
-    width: 100%;
-    background: blue;
-    display: flex;
-    justify-content: center;
+
+.form {
+  background-color: #15172b;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 640px;
+  padding: 20px;
+  width: 320px;
 }
-main img{
-    height: 156px;
+
+.title {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
 }
-footer {
-    height: 156px;
-    width: 100%;
-    background: wheat;
+
+.subtitle {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
 }
-.header__left {
-    flex: 1;
-    background:black;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
 }
-.header__right {
-    flex: 3;
+
+.ic1 {
+  margin-top: 40px;
+}
+
+.ic2 {
+  margin-top: 30px;
+}
+
+.input {
+  background-color: #303245;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+}
+
+.cut {
+  background-color: #15172b;
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 76px;
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: #65657b;
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: #808097;
+}
+
+.input:focus ~ .placeholder {
+  color: #dc2f55;
+}
+
+.submit {
+  background-color: #08d;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  outline: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.submit:active {
+  background-color: #06b;
+}
+
+
+table {
+  border: 1px solid black;
+  margin-top: 50px;
+  margin-left: 50px;
+  border-spacing:0
+}
+tr, td {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  text-align: center;
+}
+input {
+  width: 200px;
+  height: 40px;
+}
+
+#color{
+margin-left: 60px;
 }
