--- a/style.css
+++ b/style.css
@@ -1,38 +1,542 @@
-.table {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  width: 55%;
-}
-
-.header {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-  margin-bottom: 20px;
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Verdana, Tahoma, sans-serif ;
 }
 wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.card {
-  background: rgb(108, 242, 63);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-  border-radius: 10px;
-  margin-bottom: 20px;
+
+header {
+    display: flex;
+    width: 80%;
+    height: 60px;
+    justify-content: space-between;
+    margin-bottom: 100px;
 }
-button {
-  width: 200px;
-  height: 50px;
-  border-radius: 20px;
-  background: rgb(108, 242, 63);
-  font-size: 24px;
-  border: 0;
-  color: white;
-  font-weight: 900;
+.header__left {
+    color: blue;
+    font-size: 18px;
+    font-weight: 900;
+    margin-top: 16px;
+}
+.header__center {
+
+}
+.header__right {
+
+}
+.header__right button {
+    margin-top: 10px;
+    border-radius: 30px;
+    border: 2px solid gray;
+    width: 200px;
+    height: 40px;
+    background: transparent;
+    color: blue;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    margin-top: 20px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 16px;
+    color: black;
+    background-image: linear-gradient(#372ae9, #05a0b4);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 100% 0px;
+    transition: background-size .3s;
+}
+
+a:hover {
+    background-size: 100% 2px;
+}
+
+.header__item_home {
+    color: blue;
+}
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.create {
+    display: flex;
+    height: 870px;
+    justify-content: space-between;
+}
+
+.create__left {
+    display: flex;
+    flex-direction: column;
+    width: 40%;margin-left: 200px;
+}
+
+
+.create__title {
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 30px;
+}
+.create__subtitle {
+    margin-top: 25px;
+    font-size: 18px;
+    width: 70%;
+    line-height: 30px;
+}
+
+
+.create__right {
+    width: 40%;
+}
+
+.create__button button {
+    border-radius: 30px;
+    border: 0;
+    width: 150px;
+    height: 50px;
+    background: rgb(0, 102, 255);
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 30px;
+}
+
+.create__cards {
+    width: 65%;
+    display: flex;
+    height: 200px;
+    margin-top: 35px;
+    justify-content: space-between;
+}
+.create__card {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+.create__card img {
+    width: 65px;
+    height: 65px;
+}
+.create__text {
+    font-weight: 700;
+    margin-top: 20px;
+
+}
+.create__subtext {
+    line-height: 25px;
+}
+.create__right img {
+    height: 700px;
+    width: 600px;
+    z-index: 2;
+    position: absolute;
+}
+
+
+.create__gray {
+    background: gray;
+    position: absolute;
+    z-index: 1;
+    width: 360px;
+    height: 600px;
+    margin-top: 191px;
+    margin-left: 400px;
+}
+.create__cyan {
+    background: #000839;
+    width: 500px;
+    height: 350px;
+    padding-left: 50px;
+    padding-right: 50px;
+    position: absolute;
+    z-index: 3;
+    margin-top: 375px;
+    margin-left: -50px;
+    font-size: 22px;
+}
+
+.create__card-text {
+    color: white;
+    font-weight: 900;
+    margin-top: 40px;
+}
+
+.create__card-subtext {
+    color: white;
+    line-height: 30px;
+    margin-top: 70px;
+}
+
+
+.create__card-subtext_mod {
+    margin-top: 15px;
+}
+
+.services {
+    display: flex;
+    background: #00000007;
+    height: 900px;
+    justify-content: center;
+}
+.services__box {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.services__left {
+    flex: 1;
+}
+.services__right {
+    flex: 1;
+}
+.services__subtitle {
+    width: 60%;
+    line-height: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.services__text {
+    font-size: 12px;
+    color: gray;
+    font-weight: 900;
+    margin-bottom: 5px;
+    margin-top: 70px;
+}
+.services__title {
+    font-size: 38px;
+    width: 60%;
+}
+
+li {
+    list-style-type: none;
+    line-height: 30px;
+}
+   li:before {
+    content: "✔ "; 
+   }
+
+.services__right img {
+    width: 730px;
+    height: 830px;
+    margin-top: -50px;
+    z-index: 2;
+    position: absolute;
+}
+.services__dots {
+    position: absolute;
+    z-index: 1;
+    background: url(./assets/back.png);
+    width: 500px;
+    height: 300px;
+    margin-top: 550px;
+    margin-left: -70px;
+}
+
+.numders{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    height: 130px;
+    margin-top:  50px;
+    margin-bottom: 20px;
+}
+.numbers__card{ 
+    width: 20%;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.numders__val{
+    font-size: 30px;
+    font-weight: 900;
+    color: #05133A;
+}
+.numbers__text{
+    margin-top:8px;
+    font-weight: 600;
+    color: #05133A;
+}
+.numbers__subtext{
+    font-weight: 600;
+    color:rgb(122, 122, 122);
+}
+
+.top{
+    margin-top: 8px;
+}
+
+.work{
+    margin-top: 50px;
+    width: 80%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.work__text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+    font-size: 30px;
+    font-weight: 1000;
+    color: #05133A;
+}
+.work__subtext{
+    font-weight: 600;
+    color:rgb(122, 122, 122);
+    margin-top: 10px;
+}
+
+.step{
+    width: 80%;
+    height:200px;
+    display: flex;
+    justify-content: space-between;
+    margin-top:40px;
+    margin-bottom: 50px;
+}
+.step__arrow{
+    margin-top: 60px;
+}
+.step__text{
+    margin-top:8px;
+    font-weight: 600;
+    color: #05133A;
+}
+.step__subtext{
+    font-weight: 600;
+    color:rgb(92, 92, 92);
+    margin-top: 6px;
+}
+
+.man{
+    width: 80%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+.man__text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    font-weight: 600;
+    color: #05133A;
+    line-height: 30px;
+}
+.man__name{
+    font-weight: 900;
+    font-size: 20px;
+    color: #05133A;
+    margin-top: 27px;
+}
+.a{
+    margin-top: 5px;
+}
+
+.blog{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 500px;
+    background: rgb(247, 247, 247);
+}
+
+.blog__content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin-top: 50px;
+}
+.blog__subtext{
+    font-weight: 600;
+    color:rgb(92, 92, 92);
+}
+
+.blog__text{
+    margin-top: 10px;
+    font-size: 30px;
+    font-weight: 1000;
+    color: #05133A;
+
+}
+
+.blog__cards{
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog__element{
+    background-color: rgb(255, 255, 255);
+    width: 18%;
+    height: 270px;
+    padding-left: 15px;
+    padding-top: 20px;
+    border-radius: 15px;
+}
+
+.blog__description{
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #05133A;
+}
+.blog__subdescription{
+    margin-top:7px;
+    line-height:25px;
+    font-weight: 600;
+    color:rgb(92, 92, 92);
+}
+
+.blog__date{
+    font-weight: 600;
+    color:rgb(92, 92, 92);
+}
+
+
+@media screen and (max-width: 820px) { 
+   .create__gray, .header__center, .services__dots {
+       display: none;
+   }
+   .services__box, .create {
+       flex-direction: column;
+       align-items: center;
+   }
+   .create__left, .create__right {
+       width: 80%;
+       margin-left: 0;
+       align-items: center;
+   }
+   .create {
+       height: auto;
+   }
+   .services__right img {
+       margin-left: -365px;
+       margin-top: 10px;
+   }
+   .services {
+       background: transparent;
+   }
+   .services__subtitle, .services__title {
+       width: 100%;
+   }
+   .numders {
+       margin-top: 750px;
+   }
+   .create__right {
+       margin-left: 70px;
+   }
+   .blog__element {
+       width: 17%;
+       height: 100%;
+   }
+   .blog__description {
+       font-size: 14px;
+   }
+    .blog__date {
+       line-height: normal;
+       font-size: 13px;
+   }
+   .blog__subdescription {
+       display: none;
+   }
+   .blog {
+       height: 340px;
+   }
+}
+
+@media screen and (max-width: 420px) { 
+    .create__right img {
+        height: 400px;
+        width: 270px;
+    }
+    .create__title {
+        text-align: center;
+        font-size: 28px;
+    }
+    header {
+        margin-bottom: 20px;
+    }
+    .create__subtitle {
+        text-align: center;
+    } 
+    .create__cyan {
+        width: 220px;
+        height: 200px;
+        font-size: 14px;
+        margin-top: 200px;
+        margin-left: 0px;
+    }
+    .create__card-subtext {
+        line-height: normal;
+        margin-top: 30px;
+    }
+    .create__card-text {
+        margin-top: 2px;
+    }
+    .numders {
+        margin-top: 425px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .numbers__card {
+        margin-bottom: 55px;
+        text-align: center;
+        width: 70%;
+    }
+    .work {
+        margin-top: 555px;
+    }
+    .step {
+        display: none;
+    }
+    .work__text {
+        font-size: 18px;
+        text-align: center;
+    }
+    .services__right img {
+        width: 361px;
+        height: 492px;
+        margin-left: -178px;
+        margin-top: 10px;
+    }
+    .blog__cards {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .blog__element {
+        width: 80%;
+        margin-bottom: 40px;
+        text-align: center;
+        height: 100px;
+    }
+    .blog {
+        height: 955px;
+    }
+    .blog__subdescription {
+        display: none;
+    }
 }
